Adiciona conceitos de Atribuição e arrays